--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,21 @@
+:root {
+    --brown: #ab6334;
+    --green: #869b5b;
+    --black: #202020;
+}
 
+html {
+    height: 100%;
+}
 
-
-
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 
 
 /* Starting section */
-#start p {
+#start {
     text-align: center;
+    
 }
