--- a/assets/style.css
+++ b/assets/style.css
@@ -19,3 +19,17 @@ body {
     text-align: center;
     
 }
+
+main {
+    width: 80%;
+    margin: auto;
+    height: 75%;
+    box-sizing: border-box;
+    padding: 20px 0;
+}
+
+section img {
+    width: 15%;
+    border: 1px solid var(--black);
+    box-shadow: 1px 1px 1px lightgrey;
+}
