added header section in html and associated css styling and started start game logic in js

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,24 @@ html {
     background-color: var(--beige);
 }
 
+#header {
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+    font-size: 30px;
+    color: var(--darkbrown);
+    text-shadow: 1px 1px 1px var(--black);  
+    border-bottom: 3px solid var(--darkbrown);  
+    padding-bottom: 15px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 30px;
+    color: var(--darkbrown);
+    text-shadow: 1px 1px 1px var(--black);    
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -23,12 +41,12 @@ body {
 
 
 /* Starting section */
-#start {
+#start-section {
     text-align: center;
     margin: 175px 200px 0px 200px;
 }
 
-h1 {
+h2 {
     font-size: 225%;
     text-shadow: 1px 1px 1px var(--gray);
 }
@@ -42,7 +60,7 @@ main {
 }
 
 section img {
-    width: 25%;
+    width: 35%;
     border: 1px solid var(--black);
     box-shadow: 2px 2px 1px rgb(151, 141, 141);
     margin: 10px 0px 20px 0px;
